Thu Dec 14 21:38:31 2006  Tim Janik  <timj@gtk.org>

	* Makefile.decl (report): reintroduced tee(1) to preserve output
	during report generation, but use $PIPESTATUS to ensure successful
	execution of the subshell commands.

Thu Dec 14 02:37:04 2006  Tim Janik  <timj@gtk.org>

	* Makefile.decl (report): fix report rule so that failure exit
	status is not swallowed by tee(1).

Mon Dec 11 00:51:36 2006  Tim Janik  <timj@gtk.org>

	* tests/perftest.cc:
	* beast-gtk/bstpatterncolumns.c:
	* tools/bsewavetool.cc: adapt to new tuning relative note API.

	* tests/latency/bselatencytest.idl: minor fix.

Mon Dec  4 12:38:13 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsewavetool.cc: Added lowpass command. Both commands: made
	order configurable. Print out the frequency where the filter response
	is close to -48dB. This allows the user to get an idea how wide the
	transition band is for a given order.

Mon Dec  4 02:45:21 2006  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c: print out version information for Ogg/Vorbis.

Sun Dec  3 13:52:52 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/bse/filtertest.cc:
	* tools/bsefcompare.cc: Use "%zd" when formatting size_t values with
	printf. This avoids compiler warnings.

Sun Dec  3 10:34:13 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Added code to free feature data properly. This
	change also fixes compiler warnings on gcc < 4.2, because a virtual
	destructor was added thet was missing before.
	
Mon Nov 27 22:40:46 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsewavetool.cc: Move highpass handle from gsl to bse
	namespace.

Sun Nov 26 16:25:50 2006  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bseloopfuncs.[hc]: Moved highpass handle to
	bse/bsedatahandle-fir.cc.

	* tools/bsewavetool.cc: Commented out experimental thinout command.

Sun Nov 26 15:25:49 2006  Stefan Westerfeld  <stefan@space.twc.de>
